# buchhaltung

./: .coveragerc  .main.py.swp  LICENSE  MANIFEST.in  Pipfile  README.rst  buchhaltung.db  buha.py  customer.py  input_company.txt  input_login_tab.txt  input_login_tb.txt  keys.db  main.py  main_before_change.archive  mk_key.py  person.py  pyproject.toml  requirements.txt  requires.txt  setup.py  tox.ini
buchhaltung.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resources/: .helpers.py.swp  attr_dicts.py
src/buchhaltung/: .new_employee.py.swp  address.py  buchhaltung.db  buha.py  customer.py  login.py  mk_key.py  new_employee.py  new_entry.py  person.py  person_old.py
src/buchhaltung/resources/: .person.py.swp  buchhaltung.db  helpers.py  login.py  mk_key.py  name.py  new_employee.py  new_entry.py  person.py
src/buha/data/: Becker.db  Becker_KG.db  Becker_KG_Lohngehalt.ods  Becker_u._Sohn_KG.db  Meiner.db  Meiner_AG.db  Müller_GbR.db
src/buha/docs/: mulling.txt  names_around_the_world.txt
src/buha/scripts/: .login.py.swp  attr_dicts.py  company.py  constants.py  helpers.py  login.py  name.py  names.py  new_employee.py  new_entry.py  person.py  settings.py  shared.py  start.py
src/buha/scripts/ditched/: mk_key.archive
tests/: .test_main.py.swp  .test_person.py.swp  context.py  gpt4_help.txt  persontest.archive  test_constants.py  test_helpers.py  test_login.py  test_main.py  test_names.py  test_new_entry.py  test_person.py  test_settings.py  test_shared.py  test_start.py
