[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buha"
version = "0.0.14"
authors = [
  { name="Oliver Stapel", email="hardy.ecc95@gmail.com" },
]
description = "Small-scale and text based accounting app."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

